# delete-github-repos

./: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: main.rs
