[package]
name = "delete-github-repos"
version = "0.1.0"
edition = "2021"
authors = ["zouxiaoliang <295919168@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.18.1"
shellfish = "0.7.0"
shrust = "0.0.7"
tokio = "1.24.1"
